tests/whiley/invalid/test_162.wyal
define f_requires_0(int x) is:
    x >= 0


assert "division by zero":
    forall(int x):
        if:
            f_requires_0(x)
        then:
            x != 0


